# generic_subscriber_example

./: .gitignore  README.md  package.xml  setup.cfg  setup.py
generic_subscriber_example/: __init__.py  generic_subscriber.py  int_publisher.py  string_publisher.py
test/: test_flake8.py
