<?xml version="1.0"?>
<package format="3">
  <name>generic_subscriber_example</name>
  <version>0.0.1</version>
  <description>ROS 2 example demonstrating a generic subscriber with multiple publishers</description>
  <maintainer email="bzy.fuzy@gmail.com">BzY*FuZy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>

  <test_depend>ament_flake8</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>